# Super-Flamingo-Quest

./: .gitignore  CMakeLists.txt  README.md  To-do  To-do.txt  debug  makefile  plot  super_flamingo_quest
assets/images/: FlamingoA.png~  block_energy.png~
assets/levels/: Bee's Valley  ButterCave  Fertile Grounds I  Grassy Walks I  Grassy Walks II  OGteste  (+4 more)
header/: Block.hpp  BlockHandler.hpp  Effect.hpp  Enemy.hpp  Flamingo.hpp  Functions.hpp  Item.hpp  ItemHandler.hpp  Level.hpp  MapLoader.hpp  Play.hpp  predefinitions.hpp
images/: Flamingo2.png~  Platform.png-autosave.kra  Platform.png~  bird-flying-purple.png~  block_brick.png~  block_dirt.png~  block_dirt2x2.png~  block_gates.png-autosave.kra  block_gates.png~  block_grass.png~  block_ivy.png~  block_nextLevel.png~  coin-copper2.png~  effect-spear.png~  effect-transmutation.png~  enemy-bee.png-autosave.kra  enemy-bee.png~  enemy-crab.png~  enemy-snail.png~  key-wisdom.png-autosave.kra  mainGame.png~  mapEditor.png-autosave.kra  mapEditor.png~
include/: Block.hpp  BlockHandler.hpp  Effect.hpp  Enemy.hpp  Flamingo.hpp  Functions.hpp  Item.hpp  ItemHandler.hpp  Level.hpp  MapLoader.hpp  Play.hpp  block.hpp  block_handler.hpp  predefinitions.hpp
levels/: Bee's Valley  Bee's Valley I  ButterCave  Fertile Grounds I  Grassy Walks I  Grassy Walks II  New Level.txt  OGteste  Planes of Paris I  Planes of Paris II  debug  debugTeste  secretTest  snailTraining  snailTrainingTwo  teste.txt  testeSimplao.txt
songs/: PowerTheme (Unfinished).json
src/: Block.cpp  Block.hpp  BlockHandler.cpp  Effect.cpp  Enemy.cpp  Flamingo.cpp  Functions.cpp  Item.cpp  ItemHandler.cpp  Main.cpp  MapLoader.cpp  Play.cpp  block.cpp  block_handler.cpp
(+11 files in other folders)
